--- a/src/app/pages/usuario/cad-usuario/cad-usuario.component.html
+++ b/src/app/pages/usuario/cad-usuario/cad-usuario.component.html
@@ -42,5 +42,10 @@
         <button mat-raised-button color="accent" [disabled]="formulario.disabled" (click)="onCancelar()">Cancelar</button>
     </div>
   </form>
-  <div></div>
+  <div class="relatorio">
+     <h2>Usuários cadastrados</h2>
+     <table>
+      
+     </table>
+  </div>
 </div>
