--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -9,16 +9,16 @@
         <summary>Administração</summary>
         <div>
             <a routerLink="/cadUsuario">Usuario</a>
-            <a>Material</a>
-            <a>Produto</a>
+            <a routerLink="/material">Material</a>
+            <a routerLink="/produto">Produto</a>
         </div>
     </details>
     <details>
         <summary>Pomar</summary>
     <div>
-        <a>Cadastro</a>
-        <a>Movimento</a>
-        <a>Colheita</a>
+        <a routerLink="/cadastro">Cadastro</a>
+        <a routerLink="/movimento">Movimento</a>
+        <a routerLink="/colheita">Colheita</a>
     </div>
     </details>
   </nav>
