--- a/src/app/pages/usuario/cad-usuario/cad-usuario.component.html
+++ b/src/app/pages/usuario/cad-usuario/cad-usuario.component.html
@@ -45,7 +45,20 @@
   <div class="relatorio">
      <h2>Usuários cadastrados</h2>
      <table>
-      
+      <tr>
+        <th>Ação</th>
+        <th>Nome</th>
+        <th>Telefone</th>
+        <th>Login</th>
+        <th>E-mail</th>
+      </tr>
+      <tr *ngFor="let usuario of relatorio">
+        <td><button>Excluir</button></td>
+        <td>{{usuario.nome}}   {{usuario.sobrenome}}</td>
+        <td>{{usuario.telefone}}</td>
+        <td>{{usuario.login}}</td>
+        <td>{{usuario.email}}</td>
+      </tr>
      </table>
   </div>
 </div>
