--- a/src/app/colheita/colheita.component.scss
+++ b/src/app/colheita/colheita.component.scss
@@ -2,6 +2,7 @@ header{
     height:15vh;
     h1{
         font-size:1.5em;
+        font-family: 'Constantia';
     }
 }
 
@@ -30,6 +31,7 @@ button{
     table{
         width: 100%;
         font-family:arial;
+        border: 2px black solid;
         th{
             border-bottom:1px #CCC solid;
             padding:3px;
@@ -48,4 +50,10 @@ button{
             }
         }
     }
+}
+
+.imagem{
+    position: absolute;
+  right: -3vw;
+  bottom: -2vh;
 }
